--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:774007259454:ios:f268be1260c5b01ec76c6f",
-  "FIREBASE_PROJECT_ID": "olx-clone-flutter-f4be8",
-  "GCM_SENDER_ID": "774007259454"
+  "GOOGLE_APP_ID": "1:674536917590:ios:079cd344b16bf06fb009f7",
+  "FIREBASE_PROJECT_ID": "olx-clone-8d598",
+  "GCM_SENDER_ID": "674536917590"
 }
